show username, set idp restrictions

--- a/Wolnik.Client/Views/Shared/_Layout.cshtml
+++ b/Wolnik.Client/Views/Shared/_Layout.cshtml
@@ -38,6 +38,7 @@
                         <li><a asp-area="" asp-controller="Authorization" asp-action="Logout">Logout</a></li>
                     }
                 </ul>
+                <div style="float: right; color: #9d9d9d;padding-top: 15px">@User.Identity.Name</div>
             </div>
         </div>
     </nav>
