show id token and access token on default view

--- a/Wolnik.Client/Views/Sensor/Index.cshtml
+++ b/Wolnik.Client/Views/Sensor/Index.cshtml
@@ -1,4 +1,6 @@
-﻿@{
+﻿@model TokensViewModel
+
+@{
     ViewData["Title"] = "Home Page";
 }
 
@@ -7,4 +9,10 @@
         <h2>API</h2>
         <a asp-area="" asp-controller="Sensor" asp-action="FetchData">Fetch data</a>
     </div>
+</div>
+<div>
+    <h2>ID Token</h2>
+    <p>@Model.IdToken</p>
+    <h2>Access Token</h2>
+    <p>@Model.AccessToken</p>
 </div>
