--- a/Wolnik.Client/Views/Shared/_Layout.cshtml
+++ b/Wolnik.Client/Views/Shared/_Layout.cshtml
@@ -26,7 +26,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a asp-area="" asp-controller="Sensor" asp-action="Index" class="navbar-brand">Client</a>
+                <a asp-area="" asp-controller="Sensor" asp-action="Index" class="navbar-brand">Sensors Dashboard</a>
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
