--- a/Wolnik.Client/Views/Shared/_Layout.cshtml
+++ b/Wolnik.Client/Views/Shared/_Layout.cshtml
@@ -11,8 +11,8 @@
     </environment>
     <environment exclude="Development">
         <link rel="stylesheet" href="https://ajax.aspnetcdn.com/ajax/bootstrap/3.3.7/css/bootstrap.min.css"
-              asp-fallback-href="~/lib/bootstrap/dist/css/bootstrap.min.css"
-              asp-fallback-test-class="sr-only" asp-fallback-test-property="position" asp-fallback-test-value="absolute" />
+	      asp-fallback-href="~/lib/bootstrap/dist/css/bootstrap.min.css"
+	      asp-fallback-test-class="sr-only" asp-fallback-test-property="position" asp-fallback-test-value="absolute" />
         <link rel="stylesheet" href="~/css/site.min.css" asp-append-version="true" />
     </environment>
 </head>
@@ -33,10 +33,9 @@
                     <li><a asp-area="" asp-controller="Sensor" asp-action="Index">Home</a></li>
                     <li><a asp-area="" asp-controller="Sensor" asp-action="About">About</a></li>
                     <li><a asp-area="" asp-controller="Sensor" asp-action="Contact">Contact</a></li>
-                    @if (User.Identity.IsAuthenticated)
-                    {
+                    @if (User.Identity.IsAuthenticated) {
                         <li><a asp-area="" asp-controller="Authorization" asp-action="Logout">Logout</a></li>
-                    }
+		    }
                 </ul>
                 <div style="float: right; color: #9d9d9d;padding-top: 15px">@User.Identity.Name</div>
             </div>
@@ -57,16 +56,16 @@
     </environment>
     <environment exclude="Development">
         <script src="https://ajax.aspnetcdn.com/ajax/jquery/jquery-2.2.0.min.js"
-                asp-fallback-src="~/lib/jquery/dist/jquery.min.js"
-                asp-fallback-test="window.jQuery"
-                crossorigin="anonymous"
-                integrity="sha384-K+ctZQ+LL8q6tP7I94W+qzQsfRV2a+AfHIi9k8z8l9ggpc8X+Ytst4yBo/hH+8Fk">
+		asp-fallback-src="~/lib/jquery/dist/jquery.min.js"
+		asp-fallback-test="window.jQuery"
+		crossorigin="anonymous"
+		integrity="sha384-K+ctZQ+LL8q6tP7I94W+qzQsfRV2a+AfHIi9k8z8l9ggpc8X+Ytst4yBo/hH+8Fk">
         </script>
         <script src="https://ajax.aspnetcdn.com/ajax/bootstrap/3.3.7/bootstrap.min.js"
-                asp-fallback-src="~/lib/bootstrap/dist/js/bootstrap.min.js"
-                asp-fallback-test="window.jQuery && window.jQuery.fn && window.jQuery.fn.modal"
-                crossorigin="anonymous"
-                integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa">
+		asp-fallback-src="~/lib/bootstrap/dist/js/bootstrap.min.js"
+		asp-fallback-test="window.jQuery && window.jQuery.fn && window.jQuery.fn.modal"
+		crossorigin="anonymous"
+		integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa">
         </script>
         <script src="~/js/site.min.js" asp-append-version="true"></script>
     </environment>
